--- a/css/style.css
+++ b/css/style.css
@@ -143,6 +143,10 @@ button:hover {
 	display: none;
 }
 
+.invalid {
+	border-color: red;
+}
+
 .clearfix::after {
   content: " ";
   display: table;
